--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
 body {
-    background: rgba(0, 255, 179, 0.452);
+    background: rgba(146, 226, 202, 0.205);
   } 
+    .wrapper {
+    margin: 0 auto;
+    width: 60%;
+    padding-bottom: 40px;
+  }
+
+  h1, h2 {
+    font-family: 'Gabriela', serif;
+    color: rgb(77, 37, 37);
+  }
+  img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+  }
+  #content {
+    padding: 20px;
+    background: rgba(248, 190, 245, 0.288);
+  }
